<resources>
    <string name="app_name">task3</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts_my_contacts">Add contacts</string>
    <string name="name">name</string>
    <string name="profile">Profile</string>
    <string name="message">MESSAGE</string>
    <string name="career">career</string>
    <string name="add_one_contact">Add contact</string>
    <string name="username">Username</string>
    <string name="career_capitalize">Career</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">SAVE</string>
    <string name="Remove_contact">Remove contact?</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="settings_text">Settings</string>
    <string name="user_name_text">Lucile Alvarado</string>
    <string name="career_text">Career</string>
    <string name="home_address_text">Home address</string>
    <string name="view_my_contacts_text">view my contacts</string>
    <string name="edit_profile_text">Edit profile</string>
    <string name="go_to_the_settings_and_fill_out_the_profile">Go to the settings and fill out the profile</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="registration_text_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="register_text">register</string>
    <string name="or_text">or</string>
    <string name="remember_me_text">Remember me</string>
    <string name="password_text">Password</string>
    <string name="e_mail_text">E-mail</string>
    <string name="GOOGLE" translatable="false">google_icon</string>
    <string name="fill_out_text">Fill out the profile and go to the application!</string>
    <string name="let_s_get_text">Let\'s get acquainted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My profile</string>
    <string name="my_contacts">My contacts</string>
</resources>