<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.AuthActivity">

    <TextView
        android:id="@+id/tv_let_s_get"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/let_s_get_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/tv_fill_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_fill_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:gravity="center"
        android:text="@string/fill_out_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_little"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:backgroundTint="@color/grey_text_2"
        android:hint="@string/e_mail_text"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_text_2"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/grey_text_2"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_text_2"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_button_logo"
        android:buttonTint="@color/white"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/remember_me_text"
        android:textColor="@color/grey_text_2"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/button_google_register"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_google_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/google_button"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        android:textSize="@dimen/text_size_small" />


    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/or_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/button_register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_button_logo"
        android:backgroundTint="@color/blue"
        android:foreground="@drawable/rectangle_orange"
        android:text="@string/register_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/tv_register" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="8dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/registration_text_conditions"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_little"
        app:layout_constraintBottom_toTopOf="@+id/tv_already_have"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_already_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_bigger"
        android:layout_marginBottom="@dimen/margin_huge"
        android:text="@string/already_have_an_account_text"
        android:textColor="@color/grey_text_2"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sign_in"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/sign_in_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/tv_already_have"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_already_have"
        app:layout_constraintTop_toTopOf="@+id/tv_already_have" />

</androidx.constraintlayout.widget.ConstraintLayout>