<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_mid_activity_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/settings_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/avatar_image_size"
            android:layout_height="@dimen/avatar_image_size"
            android:background="@drawable/ic_personal_photo"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/user_name_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_profession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/career_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/home_address_text"
            android:textColor="@color/grey_text_2"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_profession" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_mid_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line_mid_activity_main"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_button_logo"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/button_linkedin"
            app:layout_constraintEnd_toStartOf="@+id/button_linkedin"
            app:layout_constraintTop_toTopOf="@+id/button_linkedin"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/facebook_logo_vertical" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large_more"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/linkedin_logo_vertical" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_vkontakte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_button_logo"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/button_linkedin"
            app:layout_constraintStart_toEndOf="@+id/button_linkedin"
            app:layout_constraintTop_toTopOf="@+id/button_linkedin"
            app:srcCompat="@drawable/vkontakte_logo_vertical" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/go_to_the_settings_and_fill_out_the_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/button_edit_profile"
            app:layout_constraintEnd_toEndOf="@+id/button_edit_profile"
            app:layout_constraintStart_toStartOf="@+id/button_edit_profile" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:backgroundTint="@color/white"
            android:foreground="@drawable/rectangle_black"
            android:text="@string/edit_profile_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintBottom_toTopOf="@+id/button_view_contacts"
            app:layout_constraintEnd_toEndOf="@+id/button_view_contacts"
            app:layout_constraintStart_toStartOf="@+id/button_view_contacts" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_view_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@drawable/rect_orange"
            android:text="@string/view_my_contacts_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small_bigger"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>