<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.fragments.FragmentProfile">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/guidelineMid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintBackground">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_arrow_left_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large_more"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/tvProfile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProfile"
            app:srcCompat="@drawable/arrow_left_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large_more"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/avatar_image_size"
            android:layout_height="@dimen/avatar_image_size"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProfile"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_personal_photo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/user_name_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_profession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/career_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/home_address_text"
            android:textColor="@color/grey_text_2"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_profession" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="00dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/constraintBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineMid">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_button_logo"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/button_linkedin"
            app:layout_constraintEnd_toStartOf="@+id/button_linkedin"
            app:layout_constraintTop_toTopOf="@+id/button_linkedin"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/facebook_logo_vertical" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large_more"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/linkedin_logo_vertical" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_vkontakte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_button_logo"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/button_linkedin"
            app:layout_constraintStart_toEndOf="@+id/button_linkedin"
            app:layout_constraintTop_toTopOf="@+id/button_linkedin"
            app:srcCompat="@drawable/vkontakte_logo_vertical" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_view_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:backgroundTint="@color/orange"
            android:text="@string/message"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small_bigger"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>